# cartography-openapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-python.yml  ci.yml  scorecard.yml  security.yml
cartography_openapi/: checklist.py  component.py  entity.py  module.py  pagination.py  parser.py  path.py
cartography_openapi/templates/: docs_config.jinja  docs_schema.jinja  intel.jinja  intel_entity.jinja  intel_sync_call.jinja  model.jinja  tests_data.jinja  tests_integration.jinja
examples/clevercloud/: README.md  openapi.json
examples/clevercloud/clevercloud_module/: PR.md
examples/clevercloud/clevercloud_module/docs/: config.md  schema.md
examples/clevercloud/clevercloud_module/integration_tests/: test_addons.py  test_applications.py  test_organizations.py
examples/clevercloud/clevercloud_module/intel/: __init__.py  addon.py  addons.py  application.py  applications.py  organization.py  organizations.py
examples/clevercloud/clevercloud_module/models/: addon.py  application.py  organization.py
examples/clevercloud/clevercloud_module/tests_data/: addons.py  applications.py  organizations.py
examples/keycloak/: README.md  openapi.json
examples/keycloak/keycloak_module/docs/: config.md  schema.md
examples/keycloak/keycloak_module/integration_tests/: test_clients.py  test_groups.py  test_realms.py  test_users.py
examples/keycloak/keycloak_module/intel/: __init__.py  client.py  clients.py  group.py  groups.py  realm.py  realms.py  user.py  users.py
(+8 files in other folders)
