[project]
name = "cartography-openapi"
version = "0.3.0"
description = "A intel plugin builder for cartogaphy for API supporting OpenAPI."
authors = [
    { name = "Jeremy Chapeau", email = "jeremy.chapeau@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/jychp/cartography-openapi"
Download = "https://github.com/jychp/cartography-openapi/releases"
"Bug Report" = "https://github.com/jychp/cartography-openapi/issues"

[tool.poetry]
packages = [{include = "cartography_openapi"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.3"
jinja2 = "^3.1.6"
requests = "^2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
